objects/ssot__Scope3ProcurementItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Scope 3 Procurement Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PcmtEmssnFctrSetItemId__c</fullName>
        <label>Procurement Emissions Factor Set Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcurementSummaryId__c</fullName>
        <label>Procurement Summary</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductEmissionsFactorId__c</fullName>
        <label>Product Emissions Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaseQuantity__c</fullName>
        <label>Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmissionsCalculationType__c</fullName>
        <label>Emissions Calculation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3GhgCategory__c</fullName>
        <label>Scope 3 GHG Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpendingCategory1Name__c</fullName>
        <label>Spending Category Level 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpendingCategory2Name__c</fullName>
        <label>Spending Category Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpendingCategory3Name__c</fullName>
        <label>Spending Category Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpentAmount__c</fullName>
        <label>Amount Spent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SpentDate__c</fullName>
        <label>Spending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierUnitOfMeasure__c</fullName>
        <label>Supplier Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SustainabilityScorecardId__c</fullName>
        <label>Sustainability Scorecard</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorScope3EmssnInTco2eNumber__c</fullName>
        <label>Vendor Scope 3 Emissions (tCOâe)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383678309_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementItem_PcmtEmssnFctrS_rel</label>
        <referenceTo>ssot__ProcurementEmissionFactorSetItem__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementItem_PcmtEmssnFctrS_rel</relationshipLabel>
        <relationshipName>rel_1747383678309_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383682889_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementItem_ProductId_map__rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementItem_ProductId_map__rel</relationshipLabel>
        <relationshipName>rel_1747383682889_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383685483_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementItem_ProcurementSum_rel</label>
        <referenceTo>ssot__Scope3ProcurementSummary__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementItem_ProcurementSum_rel</relationshipLabel>
        <relationshipName>rel_1747383685483_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>